--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,17 @@
       "homepage": "http://www.jenwachter.com"
     }
   ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@github.com:johnshopkins/secrets.git"
+    }
+  ],
   "require": {
     "php": ">=5.3.2",
-    "slim/slim": "2.4.2"
+    "slim/slim": "2.4.2",
+
+    "johnshopkins/secrets": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "4.0.*"
