--- a/composer.json
+++ b/composer.json
@@ -4,31 +4,8 @@
   "version": "1.0.0",
   "homepage": "http://github.com/johnshopkins/people-search",
   "license": "MIT",
-  "authors": [
-    {
-      "name": "Jason Rhodes",
-      "email": "jrhodes@jhu.edu",
-      "homepage": "http://notrobotic.com"
-    },
-    {
-      "name": "Jen Wachter",
-      "email": "jwachter@jhu.edu",
-      "homepage": "http://www.jenwachter.com"
-    }
-  ],
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "git@github.com:johnshopkins/secrets.git"
-    }
-  ],
   "require": {
-    "php": ">=5.3.2",
-    "slim/slim": "2.4.2",
-    "johnshopkins/secrets": "dev-master"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "4.0.*"
+    "php": ">=5.3.2"
   },
   "autoload": {
     "psr-4": {
